--- a/src/components/ui/NavBar.astro
+++ b/src/components/ui/NavBar.astro
@@ -8,7 +8,7 @@ import logo from '@assets/codm-db-logo.png'
 
 	<div class="logo-container">
 
-		<a href="https://www.codmdb.com/">
+		<a href="/">
             <Image src={logo} alt="CoDM DB Logo" class="logo" />
         </a>
 
@@ -24,11 +24,6 @@ import logo from '@assets/codm-db-logo.png'
         align-items: center;
         padding: 1rem;
         background-color: #ffe937;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 100;
     }
 
     .logo-container {
