--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,8 +45,8 @@ const siteImage = siteSEO.image
 					Generate Marksman Rifle Loadout
 				</a>
 			</div>
-			<a href="/br-loadout" class="generate-button" aria-disabled="true">
-				Generate Battle Royale Loadout (Coming Soon)
+			<a href="/br-loadout" class="generate-button">
+				Generate Battle Royale Loadout
 			</a>
 			<a href="/zombies-loadout" class="generate-button" aria-disabled="true">
 				Generate Zombies Loadout (Coming Soon)
