--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,7 @@
     src:
         local('Montserrat-Regular'), 
         url('../fonts/Montserrat-Regular.woff2') format('woff2');
+    font-display: swap;
 }
 
 @font-face {
@@ -24,6 +25,7 @@
     src:
         local('Montserrat-Italic'), 
         url('../fonts/Montserrat-Italic.woff2') format('woff2');
+    font-display: swap;
 }
 
 @font-face {
@@ -31,6 +33,7 @@
     src:
         local('Montserrat-Medium'), 
         url('../fonts/Montserrat-Medium.woff2') format('woff2');
+    font-display: swap;
 }
 
 @font-face {
@@ -38,6 +41,7 @@
     src:
         local('Montserrat-MediumItalic'), 
         url('../fonts/Montserrat-MediumItalic.woff2') format('woff2');
+    font-display: swap;
 }
 
 @font-face {
@@ -45,6 +49,7 @@
     src:
         local('Montserrat-Bold'), 
         url('../fonts/Montserrat-Bold.woff2') format('woff2');
+    font-display: swap;
 }
 
 @font-face {
@@ -52,6 +57,7 @@
     src:
         local('Montserrat-BoldItalic'), 
         url('../fonts/Montserrat-BoldItalic.woff2') format('woff2');
+    font-display: swap;
 }
 
 /* General Styles */
