Added Persistence Perk Scorestreaks Logic

--- a/src/pages/mp-loadout/index.astro
+++ b/src/pages/mp-loadout/index.astro
@@ -735,9 +735,9 @@ const equipment = await getEquipment()
 
 const operatorSkills = equipment.operatorSkill
 const scorestreaksArray = equipment.scorestreaks
-const persistenceScorestreaksTierOne = equipment.persistencePerks.tierOne
-const persistenceScorestreaksTierTwo = equipment.persistencePerks.tierTwo
-const persistenceScorestreaksTierThree = equipment.persistencePerks.tierThree
+const persistenceScorestreaksTierOne = equipment.persistenceScorestreaks.tierOne
+const persistenceScorestreaksTierTwo = equipment.persistenceScorestreaks.tierTwo
+const persistenceScorestreaksTierThree = equipment.persistenceScorestreaks.tierThree
 const lethals = equipment.lethal
 const tacticals = equipment.tactical
 
