--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -42,5 +42,14 @@ const {
         <NavBar />
 		<slot />
         <Footer />
+        <script type="text/javascript" is:inline>
+            window._mfq = window._mfq || [];
+            (function() {
+              var mf = document.createElement("script");
+              mf.type = "text/javascript"; mf.defer = true;
+              mf.src = "//cdn.mouseflow.com/projects/5690718c-fb2b-450b-8369-cdc186e082b2.js";
+              document.getElementsByTagName("head")[0].appendChild(mf);
+            })();
+          </script>
 	</body>
 </html>
