--- a/src/pages/zombies-loadout/index.astro
+++ b/src/pages/zombies-loadout/index.astro
@@ -1051,4 +1051,21 @@ const modulePassiveDescription = modulePassive.description
         window.location.reload();
     });
 
+    const localStorage = window.localStorage;
+
+    if(!localStorage) {
+        console.log('Local storage not supported');
+        throw new Error('Local storage not supported');
+    }
+
+    if(!localStorage.getItem('zombies-loadout')) {
+        throw new Error('Zombies loadout Experiment not found');
+    }
+
+    const zombiesExperiment = localStorage.getItem('zombies-loadout');
+
+    if(zombiesExperiment === 'disabled') {
+        return window.location.href = '/'
+    }
+
 </script>
