update: Added VLK Rogue to the weapons List. And addressed a few bugs.

--- a/src/pages/mp-loadout/index.astro
+++ b/src/pages/mp-loadout/index.astro
@@ -128,35 +128,23 @@ switch (primaryAttachmentTypeOne) {
 	case "laser":
 		attachmentTypeOne = "Laser"
 		break
+	case "triggerAction": 
+		attachmentTypeOne = "Trigger Action"
+		break
+	case "smoothbore": 
+		attachmentTypeOne = "Smoothbore"
+		break
 	case "underbarrel":
-		switch (primaryName) {
-			case "Argus":
-				attachmentTypeOne = "Trigger Action"
-				break
-			default:
-				attachmentTypeOne = "Underbarrel"
-				break
-		}
+		attachmentTypeOne = "Underbarrel"
 		break
 	case "ammunition":
-		switch (primaryName) {
-			case "R9-0":
-				attachmentTypeOne = "Smoothbore"
-				break
-			default:
-				attachmentTypeOne = "Ammunition"
-				break
-		}
+		attachmentTypeOne = "Ammunition"
+		break
+	case "bolt":
+		attachmentTypeOne = "Bolt"
 		break
 	case "rearGrip":
-		switch (primaryName) {
-			case "SP-R 208":
-				attachmentTypeOne = "Bolt"
-				break
-			default:
-				attachmentTypeOne = "Rear Grip"
-				break
-		}
+		attachmentTypeOne = "Rear Grip"
 		break
 	case "foregrip":
 		attachmentTypeOne = "Foregrip"
@@ -185,35 +173,23 @@ switch (primaryAttachmentTypeTwo) {
 	case "laser":
 		attachmentTypeTwo = "Laser"
 		break
+	case "triggerAction": 
+		attachmentTypeTwo = "Trigger Action"
+		break
+	case "smoothbore": 
+		attachmentTypeTwo = "Smoothbore"
+		break
 	case "underbarrel":
-		switch (primaryName) {
-			case "Argus":
-				attachmentTypeTwo = "Trigger Action"
-				break
-			default:
-				attachmentTypeTwo = "Underbarrel"
-				break
-		}
+		attachmentTypeTwo = "Underbarrel"
 		break
 	case "ammunition":
-		switch (primaryName) {
-			case "R9-0":
-				attachmentTypeTwo = "Smoothbore"
-				break
-			default:
-				attachmentTypeTwo = "Ammunition"
-				break
-		}
+		attachmentTypeTwo = "Ammunition"
+		break
+	case "bolt":
+		attachmentTypeTwo = "Bolt"
 		break
 	case "rearGrip":
-		switch (primaryName) {
-			case "SP-R 208":
-				attachmentTypeTwo = "Bolt"
-				break
-			default:
-				attachmentTypeTwo = "Rear Grip"
-				break
-		}
+		attachmentTypeTwo = "Rear Grip"
 		break
 	case "foregrip":
 		attachmentTypeTwo = "Foregrip"
@@ -242,35 +218,23 @@ switch (primaryAttachmentTypeThree) {
 	case "laser":
 		attachmentTypeThree = "Laser"
 		break
+	case "triggerAction": 
+		attachmentTypeThree = "Trigger Action"
+		break
+	case "smoothbore": 
+		attachmentTypeThree = "Smoothbore"
+		break
 	case "underbarrel":
-		switch (primaryName) {
-			case "Argus":
-				attachmentTypeThree = "Trigger Action"
-				break
-			default:
-				attachmentTypeThree = "Underbarrel"
-				break
-		}
+		attachmentTypeThree = "Underbarrel"
 		break
 	case "ammunition":
-		switch (primaryName) {
-			case "R9-0":
-				attachmentTypeThree = "Smoothbore"
-				break
-			default:
-				attachmentTypeThree = "Ammunition"
-				break
-		}
+		attachmentTypeThree = "Ammunition"
+		break
+	case "bolt":
+		attachmentTypeThree = "Bolt"
 		break
 	case "rearGrip":
-		switch (primaryName) {
-			case "SP-R 208":
-				attachmentTypeThree = "Bolt"
-				break
-			default:
-				attachmentTypeThree = "Rear Grip"
-				break
-		}
+		attachmentTypeThree = "Rear Grip"
 		break
 	case "foregrip":
 		attachmentTypeThree = "Foregrip"
@@ -299,35 +263,23 @@ switch (primaryAttachmentTypeFour) {
 	case "laser":
 		attachmentTypeFour = "Laser"
 		break
+	case "triggerAction": 
+		attachmentTypeFour = "Trigger Action"
+		break
+	case "smoothbore": 
+		attachmentTypeFour = "Smoothbore"
+		break
 	case "underbarrel":
-		switch (primaryName) {
-			case "Argus":
-				attachmentTypeFour = "Trigger Action"
-				break
-			default:
-				attachmentTypeFour = "Underbarrel"
-				break
-		}
+		attachmentTypeFour = "Underbarrel"
 		break
 	case "ammunition":
-		switch (primaryName) {
-			case "R9-0":
-				attachmentTypeFour = "Smoothbore"
-				break
-			default:
-				attachmentTypeFour = "Ammunition"
-				break
-		}
+		attachmentTypeFour = "Ammunition"
+		break
+	case "bolt":
+		attachmentTypeFour = "Bolt"
 		break
 	case "rearGrip":
-		switch (primaryName) {
-			case "SP-R 208":
-				attachmentTypeFour = "Bolt"
-				break
-			default:
-				attachmentTypeFour = "Rear Grip"
-				break
-		}
+		attachmentTypeFour = "Rear Grip"
 		break
 	case "foregrip":
 		attachmentTypeFour = "Foregrip"
@@ -356,35 +308,23 @@ switch (primaryAttachmentTypeFive) {
 	case "laser":
 		attachmentTypeFive = "Laser"
 		break
+	case "triggerAction": 
+		attachmentTypeFive = "Trigger Action"
+		break
+	case "smoothbore": 
+		attachmentTypeFive = "Smoothbore"
+		break
 	case "underbarrel":
-		switch (primaryName) {
-			case "Argus":
-				attachmentTypeFive = "Trigger Action"
-				break
-			default:
-				attachmentTypeFive = "Underbarrel"
-				break
-		}
+		attachmentTypeFive = "Underbarrel"
 		break
 	case "ammunition":
-		switch (primaryName) {
-			case "R9-0":
-				attachmentTypeFive = "Smoothbore"
-				break
-			default:
-				attachmentTypeFive = "Ammunition"
-				break
-		}
+		attachmentTypeFive = "Ammunition"
+		break
+	case "bolt":
+		attachmentTypeFive = "Bolt"
 		break
 	case "rearGrip":
-		switch (primaryName) {
-			case "SP-R 208":
-				attachmentTypeFive = "Bolt"
-				break
-			default:
-				attachmentTypeFive = "Rear Grip"
-				break
-		}
+		attachmentTypeFive = "Rear Grip"
 		break
 	case "foregrip":
 		attachmentTypeFive = "Foregrip"
