--- a/src/pages/br-loadout/index.astro
+++ b/src/pages/br-loadout/index.astro
@@ -275,36 +275,21 @@ switch (primaryAttachmentTypeOne) {
 		attachmentTypeOne = "Laser"
 		break
 	case "underbarrel":
-		switch (primaryWeaponName) {
-			case "Argus":
-				attachmentTypeOne = "Trigger Action"
-				break
-			default:
-				attachmentTypeOne = "Underbarrel"
-				break
-		}
+		attachmentTypeOne = "Underbarrel"
+		break
+	case "bolt":
+		attachmentTypeOne = "Bolt"
+		break
+	case "smoothbore": 
+		attachmentTypeOne = "Smoothbore"
 		break
 	case "ammunition":
-		switch (primaryWeaponName) {
-			case "R9-0":
-				attachmentTypeOne = "Smoothbore"
-				break
-			default:
-				attachmentTypeOne = "Ammunition"
-				break
-		}
+		attachmentTypeOne = "Ammunition"
 		break
 	case "rearGrip":
-		switch (primaryWeaponName) {
-			case "SP-R 208":
-				attachmentTypeOne = "Bolt"
-				break
-			default:
-				attachmentTypeOne = "Rear Grip"
-				break
-		}
+		attachmentTypeOne = "Rear Grip"
 		break
-		case "bowstring":
+	case "bowstring":
 		attachmentTypeOne = "Bowstring"
 		break
 	case "limb":
@@ -350,36 +335,21 @@ switch (primaryAttachmentTypeTwo) {
 		attachmentTypeTwo = "Laser"
 		break
 	case "underbarrel":
-		switch (primaryWeaponName) {
-			case "Argus":
-				attachmentTypeTwo = "Trigger Action"
-				break
-			default:
-				attachmentTypeTwo = "Underbarrel"
-				break
-		}
+		attachmentTypeTwo = "Underbarrel"
+		break
+	case "bolt":
+		attachmentTypeTwo = "Bolt"
+		break
+	case "smoothbore": 
+		attachmentTypeTwo = "Smoothbore"
 		break
 	case "ammunition":
-		switch (primaryWeaponName) {
-			case "R9-0":
-				attachmentTypeTwo = "Smoothbore"
-				break
-			default:
-				attachmentTypeTwo = "Ammunition"
-				break
-		}
+		attachmentTypeTwo = "Ammunition"
 		break
 	case "rearGrip":
-		switch (primaryWeaponName) {
-			case "SP-R 208":
-				attachmentTypeTwo = "Bolt"
-				break
-			default:
-				attachmentTypeTwo = "Rear Grip"
-				break
-		}
+		attachmentTypeTwo = "Rear Grip"
 		break
-		case "bowstring":
+	case "bowstring":
 		attachmentTypeTwo = "Bowstring"
 		break
 	case "limb":
@@ -425,36 +395,21 @@ switch (primaryAttachmentTypeThree) {
 		attachmentTypeThree = "Laser"
 		break
 	case "underbarrel":
-		switch (primaryWeaponName) {
-			case "Argus":
-				attachmentTypeThree = "Trigger Action"
-				break
-			default:
-				attachmentTypeThree = "Underbarrel"
-				break
-		}
+		attachmentTypeThree = "Underbarrel"
+		break
+	case "bolt":
+		attachmentTypeThree = "Bolt"
+		break
+	case "smoothbore": 
+		attachmentTypeThree = "Smoothbore"
 		break
 	case "ammunition":
-		switch (primaryWeaponName) {
-			case "R9-0":
-				attachmentTypeThree = "Smoothbore"
-				break
-			default:
-				attachmentTypeThree = "Ammunition"
-				break
-		}
+		attachmentTypeThree = "Ammunition"
 		break
 	case "rearGrip":
-		switch (primaryWeaponName) {
-			case "SP-R 208":
-				attachmentTypeThree = "Bolt"
-				break
-			default:
-				attachmentTypeThree = "Rear Grip"
-				break
-		}
+		attachmentTypeThree = "Rear Grip"
 		break
-		case "bowstring":
+	case "bowstring":
 		attachmentTypeThree = "Bowstring"
 		break
 	case "limb":
@@ -500,36 +455,21 @@ switch (primaryAttachmentTypeFour) {
 		attachmentTypeFour = "Laser"
 		break
 	case "underbarrel":
-		switch (primaryWeaponName) {
-			case "Argus":
-				attachmentTypeFour = "Trigger Action"
-				break
-			default:
-				attachmentTypeFour = "Underbarrel"
-				break
-		}
+		attachmentTypeFour = "Underbarrel"
+		break
+	case "bolt":
+		attachmentTypeFour = "Bolt"
+		break
+	case "smoothbore": 
+		attachmentTypeFour = "Smoothbore"
 		break
 	case "ammunition":
-		switch (primaryWeaponName) {
-			case "R9-0":
-				attachmentTypeFour = "Smoothbore"
-				break
-			default:
-				attachmentTypeFour = "Ammunition"
-				break
-		}
+		attachmentTypeFour = "Ammunition"
 		break
 	case "rearGrip":
-		switch (primaryWeaponName) {
-			case "SP-R 208":
-				attachmentTypeFour = "Bolt"
-				break
-			default:
-				attachmentTypeFour = "Rear Grip"
-				break
-		}
+		attachmentTypeFour = "Rear Grip"
 		break
-		case "bowstring":
+	case "bowstring":
 		attachmentTypeFour = "Bowstring"
 		break
 	case "limb":
@@ -575,36 +515,21 @@ switch (primaryAttachmentTypeFive) {
 		attachmentTypeFive = "Laser"
 		break
 	case "underbarrel":
-		switch (primaryWeaponName) {
-			case "Argus":
-				attachmentTypeFive = "Trigger Action"
-				break
-			default:
-				attachmentTypeFive = "Underbarrel"
-				break
-		}
+		attachmentTypeFive = "Underbarrel"
+		break
+	case "bolt":
+		attachmentTypeFive = "Bolt"
+		break
+	case "smoothbore": 
+		attachmentTypeFive = "Smoothbore"
 		break
 	case "ammunition":
-		switch (primaryWeaponName) {
-			case "R9-0":
-				attachmentTypeFive = "Smoothbore"
-				break
-			default:
-				attachmentTypeFive = "Ammunition"
-				break
-		}
+		attachmentTypeFive = "Ammunition"
 		break
 	case "rearGrip":
-		switch (primaryWeaponName) {
-			case "SP-R 208":
-				attachmentTypeFive = "Bolt"
-				break
-			default:
-				attachmentTypeFive = "Rear Grip"
-				break
-		}
+		attachmentTypeFive = "Rear Grip"
 		break
-		case "bowstring":
+	case "bowstring":
 		attachmentTypeFive = "Bowstring"
 		break
 	case "limb":
